# Dynamo2D

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: config.txt
source/: main.c  render.c  render.h  sprite.c  sprite.h
